# exfiltration

./: .gitignore  Cargo.toml  README.md
aggregator/: Cargo.toml
aggregator/src/: capture.rs  main.rs
exfiltration/: Cargo.toml
exfiltration/src/: main.rs
messages/: Cargo.toml
