[package]
name = "messages"
version = "0.1.0"
edition = "2021"
authors = ["Niklas Pfister <git@omikron.dev>"]
repository = "https://github.com/myOmikron/exfiltration"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Serialization library
serde = { version = "~1", features = ["derive"] }